my_app/Deployment/react-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myreactapp-service
spec:
  selector:
    app: myreactapp
  ports:
  - port: 3000 # Port on the Service (accessible internally within the cluster)
    targetPort: 3000 # Port on the Pod (your React app runs on port 3000)
