my_app/Deployment/react-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myreactapp-ingress
spec:
  rules:
  - host: www.aditya.react.dev.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: myreactapp-service
            port:
              number: 3000
